Keep source-contract tests Android-compatible